adding datetimeformat pattern

--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -1,4 +1,4 @@
-view.main.warning.settingsblank=Bitte fehlende Zugangsdaten in den Einstellungen prüfen
+view.main.warning.settingsblank=Bitte fehlende Zugangsdaten in den Einstellungen prï¿½fen
 view.main.summary=Zusammenfassung
 view.main.issue=Task
 view.main.timerange=Report-Zeitraum
@@ -15,9 +15,10 @@ timerange.thisweek=Diese Woche
 timerange.lastweek=Letzte Woche
 timerange.thismonth=Dieser Monat
 timerange.lastmonth=Letzter Monat
+date.column.format=ccc dd.MM
 
 worker.progress.login=Anmeldung bei YouTrack als {0}
-worker.progress.creatingreport=Erstelle temporären Report {0}
+worker.progress.creatingreport=Erstelle temporï¿½ren Report {0}
 worker.progress.waitingforrecalculation=Warten auf Neuberechnung des Reports
 worker.progress.downloadingreport=Lade Report {0} herunter
 worker.progress.processingreport=Verarbeite Report
@@ -33,15 +34,15 @@ exceptions.main.worker.reportingrange=Report-Zeitraum darf nicht leer sein
 exceptions.main.worker.recalculation=Neuberechnung des Reports dauerte zu lange. Breche ab nach {0} Versuchen
 exceptions.main.worker.statuscode=Unerwarteter Response Code von YouTrack (Nachricht: {0}, StatusCode: {1})
 exceptions.main.worker.login=Konnte nicht bei YouTrack anmelden (Nachricht: {0}, StatusCode: {1})
-exceptions.main.worker.creatingreport=Konnte temporären Report nicht erstellen (Nachricht: {0}, StatusCode: {1})
+exceptions.main.worker.creatingreport=Konnte temporï¿½ren Report nicht erstellen (Nachricht: {0}, StatusCode: {1})
 exceptions.main.worker.blankresponse=Keine Daten von YouTrack erhalten
 exceptions.main.worker.reportstatus=Konnte Report-Status nicht erhalten (Nachricht: {0}, StatusCode: {1})
-exceptions.main.worker.deletereport=Konnte temporären Report nicht löschen (Nachricht: {0}, StatusCode: {1})
+exceptions.main.worker.deletereport=Konnte temporï¿½ren Report nicht lï¿½schen (Nachricht: {0}, StatusCode: {1})
 exceptions.main.worker.nullstatus=Konnte leere StatusLine nicht auswerten
 exceptions.settings.read=Konnte Einstellungen nicht aus Datei {0} laden
 exceptions.settings.create=Konnte neue Einstellungen-Datei nicht unter {0} anlegen
 exceptions.settings.write=Konnte Einstellungs-Datei nicht unter {0} speichern
-exceptions.settings.password.decrypt=Konnte YouTrack Passwort nicht entschlüsseln
-exceptions.settings.password.encrypt=Konnte YouTrack Passwort nicht verschlüsseln
+exceptions.settings.password.decrypt=Konnte YouTrack Passwort nicht entschlï¿½sseln
+exceptions.settings.password.encrypt=Konnte YouTrack Passwort nicht verschlï¿½sseln
 exceptions.report.csvparser.io=Konnte Report nicht parsen
 exceptions.main.instance=Aufruf von getInstance noch nicht erlaubt
