--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -15,7 +15,7 @@ timerange.thisweek=This week
 timerange.lastweek=Last week
 timerange.thismonth=This month
 timerange.lastmonth=Last month
-date.column.format=ccc dd.MM
+date.column.format=ccc MM.dd
 
 worker.progress.login=Logging in to YouTrack as {0}
 worker.progress.creatingreport=Creating temporary time report {0}
