adding log view

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -1,3 +1,10 @@
+view.menu.file=File
+view.menu.file.exportexcel=Export to Excel
+view.menu.file.exit=Exit
+view.menu.help=Help
+view.menu.help.logs=Log Messages
+view.menu.help.about=About
+
 view.main.warning.settingsblank=Please enter your YouTrack data in the settings screen
 view.main.summary=Summary
 view.main.issue=Issue
@@ -24,7 +31,7 @@ worker.progress.downloadingreport=Downloading time report {0}
 worker.progress.processingreport=Processing report
 worker.progress.done=Done
 
-exceptions.settingsview.io=Could not load settings view
+exceptions.view.io=Could not load view {0}
 exceptions.main.workhours.zero=Work hours are zero. Can not format time
 exceptions.main.worker.unknown=Unknown error in worklog fetcher
 exceptions.main.worker.youtrackurl=YouTrack URL must not be empty
