--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -1,3 +1,9 @@
+view.menu.file=Datei
+view.menu.file.exportexcel=Export als Excel
+view.menu.file.exit=Beenden
+view.menu.help=Hilfe
+view.menu.help.logs=Log Meldungen
+view.menu.help.about=\u00DCber
 view.main.warning.settingsblank=Bitte fehlende Zugangsdaten in den Einstellungen pr\u00FCfen
 view.main.summary=Zusammenfassung
 view.main.issue=Task
@@ -24,7 +30,7 @@ worker.progress.downloadingreport=Lade Report {0} herunter
 worker.progress.processingreport=Verarbeite Report
 worker.progress.done=Fertig
 
-exceptions.settingsview.io=Konnte die Einstellungen View nicht laden
+exceptions.view.io=Konnte View {0} nicht laden
 exceptions.main.workhours.zero=Arbeitsstunden sind 0. Kann Zeiten nicht formatieren
 exceptions.main.worker.unknown=Unbekannter Fehler beim Laden des Reports
 exceptions.main.worker.youtrackurl=YouTrack URL darf nicht leer sein
