adding all tasks and projects views

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -10,6 +10,8 @@ view.main.summary=Summary
 view.main.issue=Issue
 view.main.timerange=Report-Timerange
 view.main.download=Download Worklogs
+view.main.tabs.own=Own Worklogs
+view.main.tabs.all=All Worklogs
 view.settings.title=Settings
 view.settings.cancel=Cancel
 view.settings.save=Save
