--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -9,6 +9,8 @@ view.main.summary=Zusammenfassung
 view.main.issue=Task
 view.main.timerange=Report-Zeitraum
 view.main.download=Worklogs herunterladen
+view.main.tabs.own=Eigene Worklogs
+view.main.tabs.all=Alle Worklogs
 view.settings.title=Einstellungen
 view.settings.cancel=Abbrechen
 view.settings.save=Speichern
