locking screen while processing

--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -30,8 +30,10 @@ worker.progress.creatingreport=Creating temporary time report {0}
 worker.progress.waitingforrecalculation=Waiting for recalculation of time report
 worker.progress.downloadingreport=Downloading time report {0}
 worker.progress.processingreport=Processing report
+worker.progress.deletingreport=Deleting temporary report
 worker.progress.done=Done
 
+view.main.tabs.postprocessing=Postprocessing data
 exceptions.view.io=Could not load view {0}
 exceptions.main.workhours.zero=Work hours are zero. Can not format time
 exceptions.main.worker.unknown=Unknown error in worklog fetcher
