--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -30,8 +30,10 @@ worker.progress.creatingreport=Erstelle tempor\u00E4ren Report {0}
 worker.progress.waitingforrecalculation=Warten auf Neuberechnung des Reports
 worker.progress.downloadingreport=Lade Report {0} herunter
 worker.progress.processingreport=Verarbeite Report
+worker.progress.deletingreport=Lösche temporären Report
 worker.progress.done=Fertig
 
+view.main.tabs.postprocessing=Verarbeite Daten
 exceptions.view.io=Konnte View {0} nicht laden
 exceptions.main.workhours.zero=Arbeitsstunden sind 0. Kann Zeiten nicht formatieren
 exceptions.main.worker.unknown=Unbekannter Fehler beim Laden des Reports
