adding statistics view for own tasks

--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -19,6 +19,9 @@ view.settings.youtrackuser=Benutzername
 view.settings.youtrackpassword=Passwort
 view.settings.workhours=Arbeitsstunden pro Tag
 
+view.statistics.byproject=Zeit nach Projekt
+view.statistics.project=Projekt
+view.statistics.totaltimespent=Gesamtzeit
 timerange.thisweek=Diese Woche
 timerange.lastweek=Letzte Woche
 timerange.thismonth=Dieser Monat
