allworklogs statistics view

--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -19,7 +19,9 @@ view.settings.youtrackuser=Benutzername
 view.settings.youtrackpassword=Passwort
 view.settings.workhours=Arbeitsstunden pro Tag
 
+view.statistics.timespentinminutes=Aufwand in Minuten
 view.statistics.byproject=Zeit nach Projekt
+view.statistics.byprojectandemployee=Zeit pro Projekt / Mitarbeiter
 view.statistics.project=Projekt
 view.statistics.totaltimespent=Gesamtzeit
 timerange.thisweek=Diese Woche
