--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -19,7 +19,9 @@ view.settings.youtrackuser=Username
 view.settings.youtrackpassword=Password
 view.settings.workhours=Work hours a day
 
+view.statistics.timespentinminutes=Time spent in minutes
 view.statistics.byproject=Time spent by project
+view.statistics.byprojectandemployee=By project / employee
 view.statistics.project=Project
 view.statistics.totaltimespent=Total time spent
 timerange.thisweek=This week
