--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -25,6 +25,7 @@ view.statistics.byproject=Time spent by project
 view.statistics.byprojectandemployee=By project / employee
 view.statistics.project=Project
 view.statistics.totaltimespent=Total time spent
+view.statistics.somethingtoamountoftickets={0} ({1} Tickets)
 
 timerange.thisweek=This week
 timerange.lastweek=Last week
