--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -24,6 +24,7 @@ view.statistics.byproject=Zeit nach Projekt
 view.statistics.byprojectandemployee=Zeit pro Projekt / Mitarbeiter
 view.statistics.project=Projekt
 view.statistics.totaltimespent=Gesamtzeit
+view.statistics.somethingtoamountoftickets={0} ({1} Tickets)
 timerange.thisweek=Diese Woche
 timerange.lastweek=Letzte Woche
 timerange.thismonth=Dieser Monat
