--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -19,6 +19,9 @@ view.settings.youtrackuser=Benutzername
 view.settings.youtrackpassword=Passwort
 view.settings.workhours=Arbeitsstunden pro Tag
 
+view.settings.showStatistics=Zeige Statistik Spalte
+view.settings.autoload=Letzten Report-Zeitraum beim Start laden
+view.settings.showall=Alle Worklogs zeigen
 view.statistics.timespentinminutes=Aufwand in Minuten
 view.statistics.byproject=Zeit nach Projekt
 view.statistics.byprojectandemployee=Zeit pro Projekt / Mitarbeiter
