--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -19,6 +19,9 @@ view.settings.youtrackuser=Username
 view.settings.youtrackpassword=Password
 view.settings.workhours=Work hours a day
 
+view.settings.showStatistics=Show statistics column
+view.settings.autoload=Load last timerange on startup
+view.settings.showall=Show all worklogs
 view.statistics.timespentinminutes=Time spent in minutes
 view.statistics.byproject=Time spent by project
 view.statistics.byprojectandemployee=By project / employee
