- about dialogue and updated screenshot/license

--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -1,3 +1,8 @@
+release.version=1.2
+release.license=Lizensiert unter der MIT Lizenz
+release.icons=Icons von FAMFAMFAM
+release.description=YouTrack ist ein kommerzieller Bugtracker, entwickelt von JetBrains.\n\n\
+YouTrack Worklog Viewer ist ein open-source Tool zum Erstellen einer Übersicht über den gebuchten Aufwand bei YouTrack Tasks. Die Daten dafür werden über die YouTrack API ermittelt.
 view.menu.file=Datei
 view.menu.file.exportexcel=Export als Excel
 view.menu.file.exit=Beenden
