--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -1,3 +1,8 @@
+release.version=1.2
+release.license=Licensed under MIT License
+release.icons=Icons by FAMFAMFAM
+release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
+YouTrack Worklog Viewer is an open-source tool to get an overview of the time you have spent working on YouTrack issues over a certain amount of time. The data for the report is retrieved via the YouTrack API.
 view.menu.file=File
 view.menu.file.exportexcel=Export to Excel
 view.menu.file.exit=Exit
