started implementing excel export...still having some trouble

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -50,6 +50,8 @@ worker.progress.processingreport=Processing report
 worker.progress.deletingreport=Deleting temporary report
 worker.progress.done=Done
 
+worker.excel.exporting=Creating Excel spreadsheet
+
 view.main.tabs.postprocessing=Postprocessing data
 
 exceptions.view.io=Could not load view {0}
@@ -74,3 +76,5 @@ exceptions.settings.password.decrypt=Could not decrypt YouTrack password from se
 exceptions.settings.password.encrypt=Could not encrypt YouTrack password for settings file
 exceptions.report.csvparser.io=Could not parse report from YouTrack
 exceptions.main.instance=Call to getInstance not allowed yet
+exceptions.excel.nodata=No data to export as excel
+exceptions.excel.success=Successfully saved to {0}
