--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -47,6 +47,7 @@ worker.progress.processingreport=Verarbeite Report
 worker.progress.deletingreport=Lösche temporären Report
 worker.progress.done=Fertig
 
+worker.excel.exporting=Erstelle Excel Spreadsheet
 view.main.tabs.postprocessing=Verarbeite Daten
 exceptions.view.io=Konnte View {0} nicht laden
 exceptions.main.workhours.zero=Arbeitsstunden sind 0. Kann Zeiten nicht formatieren
@@ -70,3 +71,5 @@ exceptions.settings.password.decrypt=Konnte YouTrack Passwort nicht entschl\u00F
 exceptions.settings.password.encrypt=Konnte YouTrack Passwort nicht verschl\u00FCsseln
 exceptions.report.csvparser.io=Konnte Report nicht parsen
 exceptions.main.instance=Aufruf von getInstance noch nicht erlaubt
+exceptions.excel.nodata=Keine Daten für Excel Export
+exceptions.excel.success=Erfolgreich gespeichert nach {0}
