- free date selection (not fully functional yet)

--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -37,6 +37,7 @@ timerange.thisweek=Diese Woche
 timerange.lastweek=Letzte Woche
 timerange.thismonth=Dieser Monat
 timerange.lastmonth=Letzter Monat
+timerange.custom=Freie Auswahl
 date.column.format=ccc dd.MM
 
 worker.progress.login=Anmeldung bei YouTrack als {0}
@@ -73,3 +74,6 @@ exceptions.report.csvparser.io=Konnte Report nicht parsen
 exceptions.main.instance=Aufruf von getInstance noch nicht erlaubt
 exceptions.excel.nodata=Keine Daten für Excel Export
 exceptions.excel.success=Erfolgreich gespeichert nach {0}
+exceptions.internal=Interner Fehler. Bitte legen Sie ein Ticket auf der github Seite an.
+exceptions.customrange.datesrequired=Start- und Enddatum erforderlich für Freie Auswahl
+exceptions.customrange.startafterend=Enddatum darf nicht vor Startdatum liegen
