--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -37,6 +37,7 @@ timerange.thisweek=This week
 timerange.lastweek=Last week
 timerange.thismonth=This month
 timerange.lastmonth=Last month
+timerange.custom=Custom range
 date.column.format=ccc MM.dd
 
 worker.progress.login=Logging in to YouTrack as {0}
@@ -73,3 +74,6 @@ exceptions.report.csvparser.io=Could not parse report from YouTrack
 exceptions.main.instance=Call to getInstance not allowed yet
 exceptions.excel.nodata=No data to export as excel
 exceptions.excel.success=Successfully saved to {0}
+exceptions.internal=Internal error. Please file a bug report at the github page.
+exceptions.customrange.datesrequired=Start- and enddate required for custom report range
+exceptions.customrange.startafterend=Startdate must not be after enddate
