adding groupBy combobox (not working yet)

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -67,6 +67,7 @@ exceptions.main.worker.statuscode=Unexpected YouTrack response status code (Mess
 exceptions.main.worker.login=Could not login to YouTrack (Message: {0}, StatusCode: {1})
 exceptions.main.worker.creatingreport=Could not create temporary report (Message: {0}, StatusCode: {1})
 exceptions.main.worker.blankresponse=Did not receive any data from YouTrack
+exceptions.main.worker.groupbycategories=Could not get categories for groupBy criterias from YouTrack (Message: {0}, StatusCode: {1})
 exceptions.main.worker.reportstatus=Could not get report status from YouTrack (Message: {0}, StatusCode: {1})
 exceptions.main.worker.deletereport=Could not delete temporary report (Message: {0}, StatusCode: {1})
 exceptions.main.worker.nullstatus=Could not process null StatusLine
