--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -2,7 +2,7 @@ release.version=1.2
 release.license=Lizensiert unter der MIT Lizenz
 release.icons=Icons von FAMFAMFAM
 release.description=YouTrack ist ein kommerzieller Bugtracker, entwickelt von JetBrains.\n\n\
-YouTrack Worklog Viewer ist ein open-source Tool zum Erstellen einer Übersicht über den gebuchten Aufwand bei YouTrack Tasks. Die Daten dafür werden über die YouTrack API ermittelt.
+YouTrack Worklog Viewer ist ein open-source Tool zum Erstellen einer ï¿½bersicht ï¿½ber den gebuchten Aufwand bei YouTrack Tasks. Die Daten dafï¿½r werden ï¿½ber die YouTrack API ermittelt.
 view.menu.file=Datei
 view.menu.file.exportexcel=Export als Excel
 view.menu.file.exit=Beenden
@@ -45,7 +45,7 @@ worker.progress.creatingreport=Erstelle tempor\u00E4ren Report {0}
 worker.progress.waitingforrecalculation=Warten auf Neuberechnung des Reports
 worker.progress.downloadingreport=Lade Report {0} herunter
 worker.progress.processingreport=Verarbeite Report
-worker.progress.deletingreport=Lösche temporären Report
+worker.progress.deletingreport=Lï¿½sche temporï¿½ren Report
 worker.progress.done=Fertig
 
 worker.excel.exporting=Erstelle Excel Spreadsheet
@@ -72,8 +72,9 @@ exceptions.settings.password.decrypt=Konnte YouTrack Passwort nicht entschl\u00F
 exceptions.settings.password.encrypt=Konnte YouTrack Passwort nicht verschl\u00FCsseln
 exceptions.report.csvparser.io=Konnte Report nicht parsen
 exceptions.main.instance=Aufruf von getInstance noch nicht erlaubt
-exceptions.excel.nodata=Keine Daten für Excel Export
+exceptions.excel.nodata=Keine Daten fï¿½r Excel Export
 exceptions.excel.success=Erfolgreich gespeichert nach {0}
 exceptions.internal=Interner Fehler. Bitte legen Sie ein Ticket auf der github Seite an.
-exceptions.customrange.datesrequired=Start- und Enddatum erforderlich für Freie Auswahl
+exceptions.customrange.datesrequired=Start- und Enddatum erforderlich fï¿½r Freie Auswahl
 exceptions.customrange.startafterend=Enddatum darf nicht vor Startdatum liegen
+exceptions.main.worker.groupbycategories=Konnte Gruppierungskriterien nicht von YouTrack empfangen (Message\: {0}, StatusCode\: {1})
