--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -77,3 +77,4 @@ exceptions.excel.success=Successfully saved to {0}
 exceptions.internal=Internal error. Please file a bug report at the github page.
 exceptions.customrange.datesrequired=Start- and enddate required for custom report range
 exceptions.customrange.startafterend=Startdate must not be after enddate
+exceptions.main.worker.groupbycategories=Could not get categories for groupBy criterias from YouTrack (Message\: {0}, StatusCode\: {1})
