- cleaning up maincontroller - fetching groupbycategories

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -11,6 +11,9 @@ view.menu.help=Help
 view.menu.help.logs=Log Messages
 view.menu.help.about=About
 
+view.main.startdate.prompt=Start date
+view.main.enddate.prompt=End date
+view.main.groupby.prompt=Group by
 view.main.warning.settingsblank=Please enter your YouTrack data in the settings screen
 view.main.summary=Summary
 view.main.issue=Issue
@@ -18,6 +21,7 @@ view.main.timerange=Report-Timerange
 view.main.download=Download Worklogs
 view.main.tabs.own=Own Worklogs
 view.main.tabs.all=All Worklogs
+view.main.groupby.nogroupby=- No grouping -
 view.settings.title=Settings
 view.settings.cancel=Cancel
 view.settings.save=Save
@@ -81,5 +85,5 @@ exceptions.main.instance=Call to getInstance not allowed yet
 exceptions.excel.nodata=No data to export as excel
 exceptions.excel.success=Successfully saved to {0}
 exceptions.internal=Internal error. Please file a bug report at the github page.
-exceptions.customrange.datesrequired=Start- and enddate required for custom report range
-exceptions.customrange.startafterend=Startdate must not be after enddate
+exceptions.timerange.datesrequired=Start and end date are required
+exceptions.timerange.startafterend=Start date must not be after enddate
