--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -75,6 +75,10 @@ exceptions.main.instance=Call to getInstance not allowed yet
 exceptions.excel.nodata=No data to export as excel
 exceptions.excel.success=Successfully saved to {0}
 exceptions.internal=Internal error. Please file a bug report at the github page.
-exceptions.customrange.datesrequired=Start- and enddate required for custom report range
-exceptions.customrange.startafterend=Startdate must not be after enddate
+exceptions.timerange.datesrequired=Start and end date are required
+exceptions.timerange.startafterend=Start date must not be after enddate
 exceptions.main.worker.groupbycategories=Could not get categories for groupBy criterias from YouTrack (Message\: {0}, StatusCode\: {1})
+view.main.groupby.nogroupby=- No grouping -
+view.main.startdate.prompt=Start date
+view.main.enddate.prompt=End date
+view.main.groupby.prompt=Group by
