- grouping almost done (excel export and statistics still missing)

--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -1,4 +1,4 @@
-release.version=1.2
+release.version=2.0
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -38,7 +38,7 @@ timerange.lastweek=Last week
 timerange.thismonth=This month
 timerange.lastmonth=Last month
 timerange.custom=Custom range
-date.column.format=ccc MM.dd
+date.column.format=ccc MM/dd
 
 worker.progress.login=Logging in to YouTrack as {0}
 worker.progress.creatingreport=Creating temporary time report {0}
@@ -70,7 +70,7 @@ exceptions.settings.create=Could not create new settings file at {0}
 exceptions.settings.write=Could not write to settings file at {0}
 exceptions.settings.password.decrypt=Could not decrypt YouTrack password from settings file
 exceptions.settings.password.encrypt=Could not encrypt YouTrack password for settings file
-exceptions.report.csvparser.io=Could not parse report from YouTrack
+exceptions.report.csvparser.io=Could not parse report data from YouTrack
 exceptions.main.instance=Call to getInstance not allowed yet
 exceptions.excel.nodata=No data to export as excel
 exceptions.excel.success=Successfully saved to {0}
