- percentage in statistics column (https://github.com/pbauerochse/youtrack-worklog-viewer/issues/10) - another bargraph user to projects

--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -82,3 +82,4 @@ view.main.groupby.nogroupby=- Keine Gruppierung -
 view.main.startdate.prompt=Startdatum
 view.main.enddate.prompt=Enddatum
 view.main.groupby.prompt=Gruppierung
+view.statistics.byemployeeandproject=Zeit pro Mitarbeiter / Projekt
