--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -82,3 +82,4 @@ view.main.groupby.nogroupby=- No grouping -
 view.main.startdate.prompt=Start date
 view.main.enddate.prompt=End date
 view.main.groupby.prompt=Group by
+view.statistics.byemployeeandproject=By employee / project
