--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -36,6 +36,7 @@ view.settings.showall=Show all worklogs
 view.statistics.timespentinminutes=Time spent in minutes
 view.statistics.byproject=Time spent by project
 view.statistics.byprojectandemployee=By project / employee
+view.statistics.byemployeeandproject=By employee / project
 view.statistics.project=Project
 view.statistics.totaltimespent=Total time spent
 view.statistics.somethingtoamountoftickets={0} ({1} Tickets)
