- bargraph colors - showing statistic times in hours instead of minutes

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -33,7 +33,7 @@ view.settings.showStatistics=Show statistics column
 view.settings.autoload=Load last timerange on startup
 view.settings.showall=Show all worklogs
 
-view.statistics.timespentinminutes=Time spent in minutes
+view.statistics.timespentinhours=Time spent in hours
 view.statistics.byproject=Time spent by project
 view.statistics.byprojectandemployee=By project / employee
 view.statistics.byemployeeandproject=By employee / project
