--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -27,7 +27,7 @@ view.settings.workhours=Work hours a day
 view.settings.showStatistics=Show statistics column
 view.settings.autoload=Load last timerange on startup
 view.settings.showall=Show all worklogs
-view.statistics.timespentinminutes=Time spent in minutes
+view.statistics.timespentinhours=Time spent in hours
 view.statistics.byproject=Time spent by project
 view.statistics.byprojectandemployee=By project / employee
 view.statistics.project=Project
