introducing feature to export times as hour decimals in excel report (instead of string formatted)

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -32,6 +32,7 @@ view.settings.workhours=Work hours a day
 view.settings.showStatistics=Show statistics column
 view.settings.autoload=Load last timerange on startup
 view.settings.showall=Show all worklogs
+view.settings.showDecimalsInExcel=Hours as decimal number in excel report
 
 view.statistics.timespentinhours=Time spent in hours
 view.statistics.byproject=Time spent by project
