--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -83,3 +83,4 @@ view.main.startdate.prompt=Startdatum
 view.main.enddate.prompt=Enddatum
 view.main.groupby.prompt=Gruppierung
 view.statistics.byemployeeandproject=Zeit pro Mitarbeiter / Projekt
+view.settings.showDecimalsInExcel=Stunden als Dezimalzahl in Excel Report
