--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -83,3 +83,4 @@ view.main.startdate.prompt=Start date
 view.main.enddate.prompt=End date
 view.main.groupby.prompt=Group by
 view.statistics.byemployeeandproject=By employee / project
+view.settings.showDecimalsInExcel=Hours as decimal number in excel report
