preparing oauth2 authentication

--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -84,3 +84,10 @@ view.main.enddate.prompt=Enddatum
 view.main.groupby.prompt=Gruppierung
 view.statistics.byemployeeandproject=Zeit pro Mitarbeiter / Projekt
 view.settings.showDecimalsInExcel=Stunden als Dezimalzahl in Excel Report
+exceptions.settings.oauthsecret.decrypt=Konnte YouTrack OAuth Service Secret nicht entschl\u00FCsseln
+exceptions.settings.oauthsecret.encrypt=Konnte YouTrack OAuth Service Secret nicht verschl\u00FCsseln
+view.settings.youtrackoauthservicesecret=OAuth2 Service Secret
+view.settings.youtrackoauthserviceid=OAuth2 Service ID
+view.settings.youtrackauthenticationmethod=Authentifizierung
+youtrack.authentication.httpapi=REST API
+youtrack.authentication.oauth=OAuth2
