--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -84,3 +84,10 @@ view.main.enddate.prompt=End date
 view.main.groupby.prompt=Group by
 view.statistics.byemployeeandproject=By employee / project
 view.settings.showDecimalsInExcel=Hours as decimal number in excel report
+exceptions.settings.oauthsecret.decrypt=Could not decrypt YouTrack OAuth service secret from settings file
+exceptions.settings.oauthsecret.encrypt=Could not encrypt YouTrack OAuth service secret for settings file
+view.settings.youtrackoauthservicesecret=OAuth2 Service Secret
+view.settings.youtrackoauthserviceid=OAuth2 Service ID
+view.settings.youtrackauthenticationmethod=Authentication method
+youtrack.authentication.httpapi=REST API
+youtrack.authentication.oauth=OAuth2
