--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -28,6 +28,9 @@ view.settings.save=Save
 view.settings.youtrackurl=YouTrack-URL
 view.settings.youtrackuser=Username
 view.settings.youtrackpassword=Password
+view.settings.youtrackauthenticationmethod=Authentication method
+view.settings.youtrackoauthserviceid=OAuth2 Service ID
+view.settings.youtrackoauthservicesecret=OAuth2 Service Secret
 view.settings.workhours=Work hours a day
 view.settings.showStatistics=Show statistics column
 view.settings.autoload=Load last timerange on startup
@@ -48,6 +51,9 @@ timerange.thismonth=This month
 timerange.lastmonth=Last month
 timerange.custom=Custom range
 date.column.format=ccc dd.MM.
+
+youtrack.authentication.oauth=OAuth2
+youtrack.authentication.httpapi=REST API
 
 worker.progress.login=Logging in to YouTrack as {0}
 worker.progress.creatingreport=Creating temporary time report {0}
@@ -82,6 +88,8 @@ exceptions.settings.create=Could not create new settings file at {0}
 exceptions.settings.write=Could not write to settings file at {0}
 exceptions.settings.password.decrypt=Could not decrypt YouTrack password from settings file
 exceptions.settings.password.encrypt=Could not encrypt YouTrack password for settings file
+exceptions.settings.oauthsecret.decrypt=Could not decrypt YouTrack OAuth service secret from settings file
+exceptions.settings.oauthsecret.encrypt=Could not encrypt YouTrack OAuth service secret for settings file
 exceptions.report.csvparser.io=Could not parse report data from YouTrack
 exceptions.main.instance=Call to getInstance not allowed yet
 exceptions.excel.nodata=No data to export as excel
