OAuth2 authentication (fixes https://github.com/pbauerochse/youtrack-worklog-viewer/issues/12)

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -97,3 +97,4 @@ exceptions.excel.success=Successfully saved to {0}
 exceptions.internal=Internal error. Please file a bug report at the github page.
 exceptions.timerange.datesrequired=Start and end date are required
 exceptions.timerange.startafterend=Start date must not be after enddate
+exceptions.oauth.couldnotobtainaccesstoken=Could not obtain access token
