--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -78,6 +78,7 @@ exceptions.internal=Interner Fehler. Bitte legen Sie ein Ticket auf der github S
 exceptions.timerange.datesrequired=Start- und Enddatum sind erforderlich
 exceptions.timerange.startafterend=Enddatum darf nicht vor Startdatum liegen
 exceptions.main.worker.groupbycategories=Konnte Gruppierungskriterien nicht von YouTrack empfangen (Message\: {0}, StatusCode\: {1})
+exceptions.oauth.couldnotobtainaccesstoken=Konnte Access Token nicht bekommen
 view.main.groupby.nogroupby=- Keine Gruppierung -
 view.main.startdate.prompt=Startdatum
 view.main.enddate.prompt=Enddatum
