--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -91,3 +91,4 @@ view.settings.youtrackoauthserviceid=OAuth2 Service ID
 view.settings.youtrackauthenticationmethod=Authentication method
 youtrack.authentication.httpapi=REST API
 youtrack.authentication.oauth=OAuth2
+exceptions.oauth.couldnotobtainaccesstoken=Could not obtain access token
