introducing configurable hub url

--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -1,4 +1,4 @@
-release.version=2.1.0
+release.version=2.1.1
 release.license=Lizensiert unter der MIT Lizenz
 release.icons=Icons von FAMFAMFAM
 release.description=YouTrack ist ein kommerzieller Bugtracker, entwickelt von JetBrains.\n\n\
@@ -92,3 +92,9 @@ view.settings.youtrackoauthserviceid=OAuth2 Service ID
 view.settings.youtrackauthenticationmethod=Authentifizierung
 youtrack.authentication.httpapi=REST API
 youtrack.authentication.oauth=OAuth2
+view.settings.youtrackoauthhuburl=OAuth2 Hub URL
+view.settings.general=Allgemein
+view.settings.authentication=Anmeldung
+view.settings.authentication.help=Was muss ich hier eintragen?
+view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
+exceptions.main.oauth2.huburl=Hub URL nicht gesetzt. Bitte Einstellungen überprüfen
