--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -1,4 +1,4 @@
-release.version=2.1.0
+release.version=2.1.1
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -92,3 +92,9 @@ view.settings.youtrackauthenticationmethod=Authentication method
 youtrack.authentication.httpapi=REST API
 youtrack.authentication.oauth=OAuth2
 exceptions.oauth.couldnotobtainaccesstoken=Could not obtain access token
+view.settings.youtrackoauthhuburl=OAuth2 Hub URL
+view.settings.general=General
+view.settings.authentication=Authentication
+view.settings.authentication.help=Not sure what to enter?
+view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
+exceptions.main.oauth2.huburl=Hub URL not set. Please check your settings
