--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -1,4 +1,4 @@
-release.version=2.1.0
+release.version=2.1.1
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -22,6 +22,8 @@ view.main.download=Download Worklogs
 view.main.tabs.own=Own Worklogs
 view.main.tabs.all=All Worklogs
 view.main.groupby.nogroupby=- No grouping -
+view.settings.authentication=Authentication
+view.settings.general=General
 view.settings.title=Settings
 view.settings.cancel=Cancel
 view.settings.save=Save
@@ -31,11 +33,14 @@ view.settings.youtrackpassword=Password
 view.settings.youtrackauthenticationmethod=Authentication method
 view.settings.youtrackoauthserviceid=OAuth2 Service ID
 view.settings.youtrackoauthservicesecret=OAuth2 Service Secret
+view.settings.youtrackoauthhuburl=OAuth2 Hub URL
 view.settings.workhours=Work hours a day
 view.settings.showStatistics=Show statistics column
 view.settings.autoload=Load last timerange on startup
 view.settings.showall=Show all worklogs
 view.settings.showDecimalsInExcel=Hours as decimal number in excel report
+view.settings.authentication.help=Not sure what to enter?
+view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
 
 view.statistics.timespentinhours=Time spent in hours
 view.statistics.byproject=Time spent by project
@@ -68,6 +73,7 @@ worker.excel.exporting=Creating Excel spreadsheet
 view.main.tabs.postprocessing=Postprocessing data
 
 exceptions.view.io=Could not load view {0}
+exceptions.main.oauth2.huburl=Hub URL not set. Please check your settings
 exceptions.main.workhours.zero=Work hours are zero. Can not format time
 exceptions.main.worker.unknown=Unknown error in worklog fetcher
 exceptions.main.worker.youtrackurl=YouTrack URL must not be empty
