- updating screenshot - adding missing translation

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -67,6 +67,7 @@ worker.progress.downloadingreport=Downloading time report {0}
 worker.progress.processingreport=Processing report
 worker.progress.deletingreport=Deleting temporary report
 worker.progress.done=Done
+worker.progress.categories=Fetching categories
 
 worker.excel.exporting=Creating Excel spreadsheet
 
