--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -98,3 +98,4 @@ view.settings.authentication=Anmeldung
 view.settings.authentication.help=Was muss ich hier eintragen?
 view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
 exceptions.main.oauth2.huburl=Hub URL nicht gesetzt. Bitte Einstellungen überprüfen
+worker.progress.categories=Hole Kategorien
