--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -98,3 +98,4 @@ view.settings.authentication=Authentication
 view.settings.authentication.help=Not sure what to enter?
 view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
 exceptions.main.oauth2.huburl=Hub URL not set. Please check your settings
+worker.progress.categories=Fetching categories
