implementing https://github.com/pbauerochse/youtrack-worklog-viewer/issues/14

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -22,6 +22,16 @@ view.main.download=Download Worklogs
 view.main.tabs.own=Own Worklogs
 view.main.tabs.all=All Worklogs
 view.main.groupby.nogroupby=- No grouping -
+view.settings.workdays=Workdays
+view.settings.workdays.collapse=Collapse
+view.settings.workdays.highlight=Highlight
+view.settings.workdays.monday=Mon
+view.settings.workdays.tuesday=Tue
+view.settings.workdays.wednesday=Wed
+view.settings.workdays.thursday=Thu
+view.settings.workdays.friday=Fri
+view.settings.workdays.saturday=Sat
+view.settings.workdays.sunday=Sun
 view.settings.authentication=Authentication
 view.settings.general=General
 view.settings.title=Settings
@@ -76,7 +86,7 @@ view.main.tabs.postprocessing=Postprocessing data
 exceptions.view.io=Could not load view {0}
 exceptions.main.oauth2.huburl=Hub URL not set. Please check your settings
 exceptions.main.workhours.zero=Work hours are zero. Can not format time
-exceptions.main.worker.unknown=Unknown error in worklog fetcher
+exceptions.main.worker.unknown=Unknown error, please see logs
 exceptions.main.worker.youtrackurl=YouTrack URL must not be empty
 exceptions.main.worker.youtrackuser=YouTrack username must not be empty
 exceptions.main.worker.youtrackpassword=YouTrack password must not be empty
