--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -52,7 +52,7 @@ worker.excel.exporting=Erstelle Excel Spreadsheet
 view.main.tabs.postprocessing=Verarbeite Daten
 exceptions.view.io=Konnte View {0} nicht laden
 exceptions.main.workhours.zero=Arbeitsstunden sind 0. Kann Zeiten nicht formatieren
-exceptions.main.worker.unknown=Unbekannter Fehler beim Laden des Reports
+exceptions.main.worker.unknown=Unbekannter Fehler, bitte Log-Meldungen pr\u00FCfen
 exceptions.main.worker.youtrackurl=YouTrack URL darf nicht leer sein
 exceptions.main.worker.youtrackuser=YouTrack Benutzername darf nicht leer sein
 exceptions.main.worker.youtrackpassword=YouTrack Passwort darf nicht leer sein
@@ -97,5 +97,15 @@ view.settings.general=Allgemein
 view.settings.authentication=Anmeldung
 view.settings.authentication.help=Was muss ich hier eintragen?
 view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
-exceptions.main.oauth2.huburl=Hub URL nicht gesetzt. Bitte Einstellungen überprüfen
+exceptions.main.oauth2.huburl=Hub URL nicht gesetzt. Bitte Einstellungen \u00FCberpr\u00FCfen
 worker.progress.categories=Hole Kategorien
+view.settings.workdays=Arbeitstage
+view.settings.workdays.collapse=Zusammenklappen
+view.settings.workdays.highlight=Hervorheben
+view.settings.workdays.monday=Mo
+view.settings.workdays.tuesday=Di
+view.settings.workdays.wednesday=Mi
+view.settings.workdays.thursday=Do
+view.settings.workdays.friday=Fr
+view.settings.workdays.saturday=Sa
+view.settings.workdays.sunday=So
