--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -52,7 +52,7 @@ worker.excel.exporting=Creating Excel spreadsheet
 view.main.tabs.postprocessing=Postprocessing data
 exceptions.view.io=Could not load view {0}
 exceptions.main.workhours.zero=Work hours are zero. Can not format time
-exceptions.main.worker.unknown=Unknown error in worklog fetcher
+exceptions.main.worker.unknown=Unknown error, please see logs
 exceptions.main.worker.youtrackurl=YouTrack URL must not be empty
 exceptions.main.worker.youtrackuser=YouTrack username must not be empty
 exceptions.main.worker.youtrackpassword=YouTrack password must not be empty
@@ -99,3 +99,13 @@ view.settings.authentication.help=Not sure what to enter?
 view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
 exceptions.main.oauth2.huburl=Hub URL not set. Please check your settings
 worker.progress.categories=Fetching categories
+view.settings.workdays=Workdays
+view.settings.workdays.collapse=Collapse
+view.settings.workdays.highlight=Highlight
+view.settings.workdays.monday=Mon
+view.settings.workdays.tuesday=Tue
+view.settings.workdays.wednesday=Wed
+view.settings.workdays.thursday=Thu
+view.settings.workdays.friday=Fri
+view.settings.workdays.saturday=Sat
+view.settings.workdays.sunday=Sun
