implementing https://github.com/pbauerochse/youtrack-worklog-viewer/issues/11

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -15,6 +15,7 @@ view.main.startdate.prompt=Start date
 view.main.enddate.prompt=End date
 view.main.groupby.prompt=Group by
 view.main.warning.settingsblank=Please enter your YouTrack data in the settings screen
+view.main.resolved=Resolved
 view.main.summary=Summary
 view.main.issue=Issue
 view.main.timerange=Report-Timerange
@@ -66,6 +67,7 @@ timerange.thismonth=This month
 timerange.lastmonth=Last month
 timerange.custom=Custom range
 date.column.format=ccc dd.MM.
+datetime.column.format=ccc dd.MM. HH\:mm
 
 youtrack.authentication.oauth=OAuth2
 youtrack.authentication.httpapi=REST API
@@ -98,6 +100,7 @@ exceptions.main.worker.creatingreport=Could not create temporary report (Message
 exceptions.main.worker.blankresponse=Did not receive any data from YouTrack
 exceptions.main.worker.groupbycategories=Could not get categories for groupBy criterias from YouTrack (Message: {0}, StatusCode: {1})
 exceptions.main.worker.reportstatus=Could not get report status from YouTrack (Message: {0}, StatusCode: {1})
+exceptions.main.worker.issuedetails=Could not get issue details from YouTrack (Message\: {0}, StatusCode\: {1})
 exceptions.main.worker.deletereport=Could not delete temporary report (Message: {0}, StatusCode: {1})
 exceptions.main.worker.nullstatus=Could not process null StatusLine
 exceptions.settings.read=Could not read settings file from {0}
