--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -109,3 +109,6 @@ view.settings.workdays.thursday=Do
 view.settings.workdays.friday=Fr
 view.settings.workdays.saturday=Sa
 view.settings.workdays.sunday=So
+exceptions.main.worker.issuedetails=Konnte Task details nicht empfangen (Message\: {0}, StatusCode\: {1})
+view.main.resolved=Gel\u00F6st
+datetime.column.format=ccc dd.MM. HH\:mm
