--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -109,3 +109,6 @@ view.settings.workdays.thursday=Thu
 view.settings.workdays.friday=Fri
 view.settings.workdays.saturday=Sat
 view.settings.workdays.sunday=Sun
+exceptions.main.worker.issuedetails=Could not get issue details from YouTrack (Message\: {0}, StatusCode\: {1})
+view.main.resolved=Resolved
+datetime.column.format=ccc MM/dd HH\:mm
