implementing https://github.com/pbauerochse/youtrack-worklog-viewer/issues/15

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -1,4 +1,4 @@
-release.version=2.1.1
+release.version=2.2.0
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -11,6 +11,8 @@ view.menu.help=Help
 view.menu.help.logs=Log Messages
 view.menu.help.about=About
 
+worker.updatecheck.checking=Checking for new version
+worker.updatecheck.available=A new version is available ({0})
 view.main.startdate.prompt=Start date
 view.main.enddate.prompt=End date
 view.main.groupby.prompt=Group by
