--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -1,4 +1,4 @@
-release.version=2.1.1
+release.version=2.2.0
 release.license=Lizensiert unter der MIT Lizenz
 release.icons=Icons von FAMFAMFAM
 release.description=YouTrack ist ein kommerzieller Bugtracker, entwickelt von JetBrains.\n\n\
@@ -112,3 +112,5 @@ view.settings.workdays.sunday=So
 exceptions.main.worker.issuedetails=Konnte Task details nicht empfangen (Message\: {0}, StatusCode\: {1})
 view.main.resolved=Gel\u00F6st
 datetime.column.format=ccc dd.MM. HH\:mm
+worker.updatecheck.checking=Suche nach neuer Version
+worker.updatecheck.available=Eine neue Version ist verf\u00FCgbar ({0})
