--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -1,4 +1,4 @@
-release.version=2.1.1
+release.version=2.2.0
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -112,3 +112,5 @@ view.settings.workdays.sunday=Sun
 exceptions.main.worker.issuedetails=Could not get issue details from YouTrack (Message\: {0}, StatusCode\: {1})
 view.main.resolved=Resolved
 datetime.column.format=ccc MM/dd HH\:mm
+worker.updatecheck.checking=Checking for new version
+worker.updatecheck.available=A new version is available ({0})
