Working on a fix for #24

--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -114,3 +114,4 @@ view.main.resolved=Gel\u00F6st
 datetime.column.format=ccc dd.MM. HH\:mm
 worker.updatecheck.checking=Suche nach neuer Version
 worker.updatecheck.available=Eine neue Version ist verf\u00FCgbar ({0})
+exceptions.settings.authentication.invalid=Ungültiger AuthenticationProvider in den Settings definiert: {0}
