--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -114,3 +114,4 @@ view.main.resolved=Resolved
 datetime.column.format=ccc MM/dd HH\:mm
 worker.updatecheck.checking=Checking for new version
 worker.updatecheck.available=A new version is available ({0})
+exceptions.settings.authentication.invalid=Invalid authentication provider stored in settings: {0}
