--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -120,3 +120,4 @@ exceptions.internal=Internal error. Please file a bug report at the github page.
 exceptions.timerange.datesrequired=Start and end date are required
 exceptions.timerange.startafterend=Start date must not be after enddate
 exceptions.oauth.couldnotobtainaccesstoken=Could not obtain access token
+exceptions.settings.authentication.invalid=Invalid authentication provider stored in settings: {0}
